deploy: 42038a92e17f48d49c5f2ae074e90a1ee6eb0d68

--- a/contents/01-introduction.html
+++ b/contents/01-introduction.html
@@ -29,9 +29,9 @@ ul.task-list li input[type="checkbox"] {
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-dark-2b3e328b71be8d25427581baeb23079b.css" rel="stylesheet" class="quarto-color-scheme quarto-color-alternate" id="quarto-text-highlighting-styles">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-de070a7b0ab54f8780927367ac907214.css" rel="stylesheet" class="quarto-color-scheme-extra" id="quarto-text-highlighting-styles">
 <script src="../site_libs/bootstrap/bootstrap.min.js"></script><link href="../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="../site_libs/bootstrap/bootstrap-21e2a9d6b00d4589d1e820e66ecf87a5.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
-<link href="../site_libs/bootstrap/bootstrap-dark-63d448bafcef38de4538c29665c63c78.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
-<link href="../site_libs/bootstrap/bootstrap-21e2a9d6b00d4589d1e820e66ecf87a5.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
+<link href="../site_libs/bootstrap/bootstrap-a11d19bf1cd20b501c5043ffd6747f64.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
+<link href="../site_libs/bootstrap/bootstrap-dark-a8b0076ecf0f06a2a97345ccab5199fa.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
+<link href="../site_libs/bootstrap/bootstrap-a11d19bf1cd20b501c5043ffd6747f64.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "sidebar",
   "copy-button": false,
@@ -363,6 +363,7 @@ ul.task-list li input[type="checkbox"] {
   <ul>
 <li><a href="#quest-ce-que-lanalyse-de-donn%C3%A9es" id="toc-quest-ce-que-lanalyse-de-données" class="nav-link active" data-scroll-target="#quest-ce-que-lanalyse-de-données">Qu’est-ce que l’analyse de données ?</a></li>
   <li><a href="#objectifs" id="toc-objectifs" class="nav-link" data-scroll-target="#objectifs">Objectifs</a></li>
+  <li><a href="#pratique-de-programmation" id="toc-pratique-de-programmation" class="nav-link" data-scroll-target="#pratique-de-programmation">Pratique de programmation</a></li>
   </ul>
 <div class="toc-actions"><ul>
 <li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li>
@@ -398,10 +399,10 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <section id="quest-ce-que-lanalyse-de-données" class="level2"><h2 class="anchored" data-anchor-id="quest-ce-que-lanalyse-de-données">Qu’est-ce que l’analyse de données ?</h2>
 <p>L’analyse de données est un ensemble de méthodes permettant de retirer de l’information d’un jeu de données. On parle aussi d’apprentissage statistique (<em>statistical learning</em>). L’idée est d’utiliser des modèles statistiques pour comprendre comment les données sont structurées et comment elles intéragissent l’une avec l’autre.</p>
-<div class="callout callout-style-simple callout-note callout-titled">
+<div class="callout callout-style-default callout-note no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
-<i class="callout-icon"></i>
+<i class="callout-icon no-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
 Example
@@ -412,10 +413,13 @@ Example
 </div>
 </div>
 </section><section id="objectifs" class="level2"><h2 class="anchored" data-anchor-id="objectifs">Objectifs</h2>
-<p>Ce cours n’a pas vocation à être exhaustif, dans le sens de présenter toutes les méthodes possibles. Ce cours n’a pas non plus vocation à être à l’état de l’art, dans le sens où on ne s’intéressera pas aux derniers développements en apprentissage machine.</p>
-
-
-</section></main><!-- /main --><script>
+<p>Ce cours n’a pas vocation à être exhaustif, dans le sens de présenter toutes les méthodes possibles. Ce cours n’a pas non plus vocation à être à l’état de l’art, dans le sens où on ne s’intéressera pas aux derniers développements en apprentissage machine. Ce cours n’est pas non plus un cours de programmation.</p>
+</section><section id="pratique-de-programmation" class="level2"><h2 class="anchored" data-anchor-id="pratique-de-programmation">Pratique de programmation</h2>
+<ul>
+<li><p>Conseils généraux</p></li>
+<li><p>Spécifique à R</p></li>
+<li><p>Spécifique à Python</p></li>
+</ul></section></main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
