--- a/contents/02-revisions.html
+++ b/contents/02-revisions.html
@@ -29,9 +29,9 @@ ul.task-list li input[type="checkbox"] {
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-dark-2b3e328b71be8d25427581baeb23079b.css" rel="stylesheet" class="quarto-color-scheme quarto-color-alternate" id="quarto-text-highlighting-styles">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-de070a7b0ab54f8780927367ac907214.css" rel="stylesheet" class="quarto-color-scheme-extra" id="quarto-text-highlighting-styles">
 <script src="../site_libs/bootstrap/bootstrap.min.js"></script><link href="../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="../site_libs/bootstrap/bootstrap-21e2a9d6b00d4589d1e820e66ecf87a5.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
-<link href="../site_libs/bootstrap/bootstrap-dark-63d448bafcef38de4538c29665c63c78.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
-<link href="../site_libs/bootstrap/bootstrap-21e2a9d6b00d4589d1e820e66ecf87a5.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
+<link href="../site_libs/bootstrap/bootstrap-a11d19bf1cd20b501c5043ffd6747f64.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
+<link href="../site_libs/bootstrap/bootstrap-dark-a8b0076ecf0f06a2a97345ccab5199fa.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
+<link href="../site_libs/bootstrap/bootstrap-a11d19bf1cd20b501c5043ffd6747f64.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "sidebar",
   "copy-button": false,
@@ -59,7 +59,33 @@ ul.task-list li input[type="checkbox"] {
     "search-label": "Recherche"
   }
 }</script><style>html{ scroll-behavior: smooth; }</style>
-<meta property="og:title" content="Révisions – STT-2200: Analyse de données">
+<script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script><script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script><script type="text/javascript">
+const typesetMath = (el) => {
+  if (window.MathJax) {
+    // MathJax Typeset
+    window.MathJax.typeset([el]);
+  } else if (window.katex) {
+    // KaTeX Render
+    var mathElements = el.getElementsByClassName("math");
+    var macros = [];
+    for (var i = 0; i < mathElements.length; i++) {
+      var texText = mathElements[i].firstChild;
+      if (mathElements[i].tagName == "SPAN") {
+        window.katex.render(texText.data, mathElements[i], {
+          displayMode: mathElements[i].classList.contains('display'),
+          throwOnError: false,
+          macros: macros,
+          fleqn: false
+        });
+      }
+    }
+  }
+}
+window.Quarto = {
+  typesetMath
+};
+</script><meta property="og:title" content="Révisions – STT-2200: Analyse de données">
+<meta property="og:description" content="">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
 </head>
 <body class="nav-sidebar floating quarto-light">
@@ -356,9 +382,29 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </nav><div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
-        
-    </div>
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active"><h2 id="toc-title">Sur cette page</h2>
+   
+  <ul>
+<li>
+<a href="#project-danalyse-donn%C3%A9es" id="toc-project-danalyse-données" class="nav-link active" data-scroll-target="#project-danalyse-données">Project d’analyse données</a>
+  <ul class="collapse">
+<li><a href="#d%C3%A9finition-des-objectifs" id="toc-définition-des-objectifs" class="nav-link" data-scroll-target="#définition-des-objectifs">Définition des objectifs</a></li>
+  <li><a href="#donn%C3%A9es" id="toc-données" class="nav-link" data-scroll-target="#données">Données</a></li>
+  </ul>
+</li>
+  <li><a href="#r%C3%A9visions-dalg%C3%A8bre-lin%C3%A9aire" id="toc-révisions-dalgèbre-linéaire" class="nav-link" data-scroll-target="#révisions-dalgèbre-linéaire">Révisions d’algèbre linéaire</a></li>
+  <li><a href="#r%C3%A9visions-de-probabilit%C3%A9" id="toc-révisions-de-probabilité" class="nav-link" data-scroll-target="#révisions-de-probabilité">Révisions de probabilité</a></li>
+  </ul>
+<div class="toc-actions"><ul>
+<li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li>
+<li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/contents/02-revisions.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li>
+</ul></div>
+<div class="quarto-alternate-formats">
+<h2>Autres formats</h2>
+<ul><li><a href="02-revisions.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul>
+</div></nav>
+</div>
 <!-- main -->
 <main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb">
 <li class="breadcrumb-item"><a href="../contents/01-introduction.html">Modules</a></li>
@@ -378,7 +424,154 @@ ul.task-list li input[type="checkbox"] {
   
 
 
-</header></main><!-- /main --><script>
+</header><ul>
+<li>Slides: <a href="../slides/02-revisions-slides.html">link</a>
+</li>
+</ul>
+<section id="project-danalyse-données" class="level2"><h2 class="anchored" data-anchor-id="project-danalyse-données">Project d’analyse données</h2>
+<p>Un projet d’analyse de données se découpe en cinq étapes:</p>
+<ol type="1">
+<li><p>Définition des objectifs</p></li>
+<li><p>Données</p></li>
+<li><p>Élaboration et validation des modèles</p></li>
+<li><p>Mise en oeuvre</p></li>
+<li><p>Suivi de la performance et amélioration</p></li>
+</ol>
+<div class="callout callout-style-default callout-tip no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Remarque
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Dans ce cours, on s’intéressera principalement à l’élaboration et à la validation de modèles.</p>
+</div>
+</div>
+<p>TODO: Planification d’un projet</p>
+<section id="définition-des-objectifs" class="level3"><h3 class="anchored" data-anchor-id="définition-des-objectifs">Définition des objectifs</h3>
+<p>Est-ce que l’on veut: visualiser les données ? explorer et émettre des hypothèses? tester? regrouper? comprendre? prédire?</p>
+<p>Comment fait-on en pratique ? On pose des questions ! Tout d’abord, il faut clarifier les termes. Qui va utiliser le modèle et comment ? Quelle est la population cible ?</p>
+<div class="callout callout-style-default callout-note no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Examples
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<ol type="1">
+<li><p>La Banque National du Canada veut lancer un nouveau produit d’épargne et souhaite mieux connaître ses clients pour prédire s’ils veulent l’acheter.</p></li>
+<li><p>L’équipe de hockey des Canadiens de Montréal souhaite mieux connaître ses adversaires pour développer des nouvelles tactiques de jeu.</p></li>
+<li><p>Pharmascience souhaite savoir si son nouveau médicament est efficace.</p></li>
+</ol>
+</div>
+</div>
+</section><section id="données" class="level3"><h3 class="anchored" data-anchor-id="données">Données</h3>
+<ul>
+<li><p>Inventaire et qualité</p></li>
+<li><p>Constitution de la base de données</p></li>
+<li><p>Exploration et traitement préliminaire</p></li>
+</ul>
+<p>Qu’est-ce que l’on veut dire par qualité des données ?</p>
+<ul>
+<li><p>Est-ce que les données sont représentatives de la population cible ?</p></li>
+<li><p>Est-ce que les données permetternt de tirer des conclusions de causalité ?</p></li>
+<li><p>Est-ce que les données sont fiables ?</p></li>
+</ul>
+<p>Source de données:</p>
+<p>Quelques liens pour récupérer des données.</p>
+<p>Nettoyage de données: cf R (importation, nettoyage, tidyverse, types de variables, retirer les doublons, uniformiser les modalités, vérifier le format des valeurs spéciales, pivot, opérateur pipe, jointure).</p>
+<p>Exploration des données: modalités rares, modalités trop nombreuses, asymétrie, débalancement des classes, valeurs extrêmes ou aberrantes, variables fortement corrélées, valeurs manquantes.</p>
+<p>Statistiques descriptives</p>
+</section></section><section id="révisions-dalgèbre-linéaire" class="level2"><h2 class="anchored" data-anchor-id="révisions-dalgèbre-linéaire">Révisions d’algèbre linéaire</h2>
+<p>Cf. cours MAT-1200. Donner quelques reférences.</p>
+<p>Notons <span class="math inline">\(M\)</span>, <span class="math inline">\(N\)</span> et <span class="math inline">\(P\)</span> des matrices de taille <span class="math inline">\(n \times m\)</span>, <span class="math inline">\(A\)</span> et <span class="math inline">\(B\)</span> des matrices carrées et <span class="math inline">\(I_n\)</span> la matrice identités, de dimension <span class="math inline">\(n \times n\)</span>, et <span class="math inline">\(u\)</span> et <span class="math inline">\(v\)</span> des vecteurs colonnes de taille <span class="math inline">\(n\)</span>.</p>
+<div class="callout callout-style-default callout-important no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Propriétés de l’inverse
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><span class="math display">\[(AB)^{-1} = B^{-1} A^{-1}\]</span></p>
+</div>
+</div>
+<div class="callout callout-style-default callout-important no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Propriétés du déterminant
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><span class="math display">\[\begin{align*}
+  \text{det}(A^\top) &amp;= \text{det}(A) \\
+  \text{det}(A^{-1}) &amp;= 1 / \text{det}(A) \\
+  \text{det}(AB) &amp;= \text{det}(A)\text{det}(B)
+\end{align*}\]</span></p>
+</div>
+</div>
+<div class="callout callout-style-default callout-important no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Propriétés de la trace
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><span class="math display">\[\begin{align*}
+  \text{tr}(A + B) &amp;= \text{tr}(A) + \text{tr}(B) \\
+  \text{tr}(MN) &amp;= \text{tr}(NM)
+\end{align*}\]</span></p>
+</div>
+</div>
+<p>Propriété de matrices:</p>
+<ul>
+<li><p>Soit <span class="math inline">\(A\)</span> une matrice symmétrique de dimension <span class="math inline">\(n \times n\)</span>. <span class="math inline">\(A\)</span> est définie positive si elle est positive et inversible, c’est-à-dire si <span class="math inline">\(u^\top A u &gt; 0\)</span> pour tout <span class="math inline">\(x \in \mathbb{R}^n\)</span> tel que <span class="math inline">\(x \neq 0\)</span>.</p></li>
+<li><p>Soit <span class="math inline">\(A\)</span> une matrice carrée à valeur dans <span class="math inline">\(\mathbb{R}\)</span>. <span class="math inline">\(A\)</span> est orthogonal si <span class="math inline">\(A^\top A = A A^\top = I_n\)</span>.</p></li>
+</ul>
+<p>Valeurs et vecteurs propres:</p>
+<ul>
+<li><p>Soit <span class="math inline">\(A\)</span> une matrice carrée de dimension <span class="math inline">\(n \times n\)</span>. On dit que <span class="math inline">\(\lambda\)</span> est une valeur propre de <span class="math inline">\(A\)</span> si il existe un vecteur <span class="math inline">\(u \neq 0 \in \mathbb{R}^n\)</span> tel que <span class="math display">\[Au = \lambda u.\]</span> Le vecteur <span class="math inline">\(u\)</span> est appelé vecteur propre correspondant à la valeur propre <span class="math inline">\(\lambda\)</span> et l’ensemble des nombres réels <span class="math inline">\(\lambda\)</span> satidfaisant l’équation est appelé spectre de la matrice <span class="math inline">\(A\)</span> et noté <span class="math inline">\(\text{sp}(A)\)</span>.</p></li>
+<li><p>Si <span class="math inline">\(u\)</span> est un vecteur propre de <span class="math inline">\(A\)</span> correspondant à une valeur propre <span class="math inline">\(\lambda\)</span>, alors <span class="math inline">\(cu\)</span>, <span class="math inline">\(c \neq 0 \in \mathbb{R}\)</span> sera également un vecteur propre de <span class="math inline">\(A\)</span> correspondant à <span class="math inline">\(\lambda\)</span>.</p></li>
+<li><p>Si <span class="math inline">\(A\)</span> est symmétrique et <span class="math inline">\(u_{1}\)</span> et <span class="math inline">\(u_{2}\)</span> sont des vecteurs propres correspondant à des valeurs propres différentes de <span class="math inline">\(A\)</span>, alors <span class="math inline">\(u_{1}\)</span> et <span class="math inline">\(u_{2}\)</span> sont orthogonaux, <em>i.e.</em> <span class="math inline">\(u_{1}^\top u_{2} = 0\)</span>.</p></li>
+<li><p>Si <span class="math inline">\(A\)</span> a comme valeurs propres (réelles, mais pas forcément distinctes) <span class="math inline">\(\lambda_{1}, \dots, \lambda_{n}\)</span>, alors <span class="math display">\[\text{A} = \prod_{i = 1}^{n} \lambda_i \quad\text{et}\quad \text{tr}(A) = \sum_{i = 1}^{n} \lambda_i.\]</span></p></li>
+<li><p>Si <span class="math inline">\(A\)</span> est symmétrique, <strong>toutes</strong> ses valeurs propres sont réelles.</p></li>
+<li><p>Si <span class="math inline">\(A\)</span> est définie positive, alors toutes ses valeurs propres sont positives.</p></li>
+</ul>
+<p>Diagonalisation de matrices:</p>
+<ul>
+<li>Soit <span class="math inline">\(A\)</span> une matrice carrée de dimension <span class="math inline">\(n \times n\)</span>. On dit que <span class="math inline">\(A\)</span> est diagonalisable s’il existe une matrice carrée <span class="math inline">\(n \times n\)</span> non-singulière <span class="math inline">\(P\)</span> et une matrice <span class="math inline">\(n \times n\)</span> diagonale <span class="math inline">\(D\)</span> telles que <span class="math display">\[P^{-1} A P = D \leftrightarrow A = P D P^{-1}.\]</span>
+</li>
+</ul>
+<p>Toute matrice carrée symmétrique est diagonalisable part une matrice orthogonal <span class="math inline">\(P\)</span>.</p>
+<p>Théorème de décomposition spectrale:</p>
+<p>Soit <span class="math inline">\(A\)</span> une matrice carrée symmétrique de dimension <span class="math inline">\(n \times n\)</span> et ses <span class="math inline">\(n\)</span> valeurs propres <span class="math inline">\(\lambda_{1}, \dots, \lambda_n\)</span>. Alors il existe une matrice orthogonal <span class="math inline">\(P\)</span> telle que <span class="math display">\[A = P \Lambda P^\top, \quad\text{où}\quad \Lambda = \text{diag}(\lambda_1, \dots, \lambda_n).\]</span></p>
+<p>Si <span class="math inline">\(A\)</span> admet <span class="math inline">\(n\)</span> valeurs propres positives distinctes, alors on peut prendre <span class="math inline">\(P\)</span> comme la matrice dont la <span class="math inline">\(k\)</span>e coloone est le vacteur propre normé correspondant à la <span class="math inline">\(k\)</span>e valeur propre <span class="math inline">\(\lambda_k\)</span>.</p>
+</section><section id="révisions-de-probabilité" class="level2"><h2 class="anchored" data-anchor-id="révisions-de-probabilité">Révisions de probabilité</h2>
+<p>Vecteurs aléatoires:</p>
+<p>Soit <span class="math inline">\(X = (X_{1}, \dots, X_{p})^\top\)</span>, un vecteur aléatoire de taille <span class="math inline">\(p\)</span>.</p>
+<p>Espérance:</p>
+<p>Matrice de variance/covariance:</p>
+<p>Matrice de corrélation:</p>
+<p>Propriété des moments:</p>
+<p>Loi normale multivariée:</p>
+<p>Estimation avec un échantillon:</p>
+
+
+</section></main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
@@ -1017,7 +1210,7 @@ window.onload = function() {
     </div>   
     <div class="nav-footer-center">
 <p>2025 | <strong>Steven Golovkine</strong> | <a class="link-footer" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a></p>
-<div class="toc-actions"><ul>
+<div class="toc-actions d-sm-block d-md-none"><ul>
 <li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li>
 <li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/contents/02-revisions.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li>
 </ul></div>
